# CMakeTemplateProject

./: CMakeLists.txt
app/: CMakeLists.txt
cmake-modules/: OCL2C.cmake
docs/: Doxyfile.in.pattern
include/: TVHist.hpp
src/: CMakeLists.txt
